# dev_ws

./: README.md  encoder.py  encoder_rpm  encoder_rpm.cpp  relay.py  salter.py  startup.sh  temp.txt
install/: setup.sh  setup.zsh
install/motor_control/share/$(PROJECT_NAME)/launch/: talker.launch.py
install/motor_control/share/motor_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/motor_control/share/motor_control/cmake/: motor_controlConfig-version.cmake  motor_controlConfig.cmake
install/motor_control/share/motor_control/environment/: ament_prefix_path.dsv  path.dsv
install/motor_control/share/motor_control/launch/: motor_control.launch.py  saltbot.launch.py
install/motor_control/share/motor_control/src/: driver_node.py
install/motor_controller/lib/motor_controller/: controller  relay  salter
install/motor_controller/share/motor_controller/: package.sh  package.xml
install/pigpio/share/pigpio/: package.sh
install/py_pubsub/share/py_pubsub/: package.xml
launch/: controller.launch.py
launch/install/: local_setup.sh  setup.sh
launch/log/: latest_build
log/: latest_build
src/install/: setup.bash  setup.ps1  setup.sh
src/install/motor_controller/lib/motor_controller/: estop
src/log/: latest_build
src/motor_control/: CMakeLists.txt
src/motor_control/launch/: listener.launch.py  saltbot.launch.py  talker.launch.py
src/motor_controller/: package.xml  setup.py
src/motor_controller/motor_controller/: estop.py  motor_driver.py  motor_driver_shit dont work.py  relay.py  salter.py
(+9 files in other folders)
